homepage icon wrap fix

--- a/drupal/sites/all/themes/tp4/sass/page/_homepage.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_homepage.scss
@@ -279,12 +279,16 @@ body.toolbar {
     font-size: 14px;
     padding-top: 3px;
     @include blue-square-bullets;
+    .openpublish_photo_gallery a{
+      padding-right: 25px;
+    }
     .openpublish_photo_gallery:after{
       font-family: "SSGizmo";
       font-size: 1.25em;
       line-height: 0.8em;
       vertical-align: text-bottom;
       content: " \1F4F7";
+      margin-left: -25px;
     }
     .video:after{
       font-family: "SSGizmo";
